// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageBlock/> should match snapshot 1`] = `
<Section
  className="theme--alpha image-block"
  contrast={false}
  data-test="component-image-block"
  theme={null}
  type="section"
>
  <Container
    className="container-fluid"
    fluid={false}
  >
    <Row
      className="row"
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        className="flex text-center"
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <Heading
          innerHTML={true}
          priority="2"
        >
          Image Block
        </Heading>
      </Flex>
    </Row>
  </Container>
</Section>
`;

exports[`<ImageBlock/> should render with pageTheme instead of module theme 1`] = `
<Section
  className="theme--brand image-block"
  contrast={false}
  data-test="component-image-block"
  theme={null}
  type="section"
>
  <Container
    className="container-fluid"
    fluid={false}
  >
    <Row
      className="row"
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        className="flex text-center"
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <Heading
          innerHTML={true}
          priority="2"
        >
          Image Block
        </Heading>
      </Flex>
    </Row>
  </Container>
</Section>
`;
